--- a/Popsicle.cabal
+++ b/Popsicle.cabal
@@ -21,6 +21,8 @@ executable Popsicle
     main-is:          Main.hs
     -- other-modules:
     -- other-extensions:
-    build-depends:    base ^>=4.17.2.1
+    build-depends:    base ^>=4.17.2.1,
+                      mtl >= 2.2.2,
+                      parsec >= 3.1.16.1
     hs-source-dirs:   app
     default-language: Haskell2010
